# python_api_template

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
.junie/: guidelines.md
alembic/: env.py
alembic/versions/: 4212c0545f96_.py  a77a2469b5c2_.py
docs/: db_initialization.md  goal.md  migration_workflow.md  tasks.md  tickets.md
docs/prompts/: README.md  complete_task.md  complete_ticket.md  continue_tasks.md
docs/work/001/: plan.md  tasks.md
docs/work/002/: plan.md  tasks.md
docs/work/003/: plan.md  tasks.md
docs/work/003B/: plan.md  tasks.md
docs/work/003C/: plan.md  tasks.md
docs/work/004A/: plan.md  tasks.md
docs/work/004B/: plan.md  tasks.md
docs/work/004C/: plan.md  tasks.md
docs/work/005A/: plan.md  tasks.md
docs/work/005B/: plan.md  tasks.md
docs/work/005C/: plan.md  tasks.md
docs/work/006/: plan.md  tasks.md
docs/work/006A/: plan.md  tasks.md
docs/work/006B/: plan.md  tasks.md
docs/work/006C/: plan.md  tasks.md
scripts/: __init__.py  db_init.py
src/pat/: config.py  main.py
src/pat/api/: __init__.py  middleware.py  responses.py  router.py
src/pat/api/v1/: __init__.py  auth.py  router.py
src/pat/models/: __init__.py  base.py  user.py
src/pat/schemas/: base.py  error.py  schemas.py  validators.py
src/pat/utils/: auth.py  crud.py  db.py  db_init.py  query.py  seed_data.py
tests/fixtures/: consts.py  database.py
tests/src/test_pat/: test_api_versioning.py  test_auth.py  test_common_response_models.py  test_crud.py  test_db.py  test_db_init.py  test_error_handling.py  test_health_check.py  test_main.py  test_middleware.py  test_migrations.py  test_query.py  test_schemas_base.py  test_schemas_validators.py  test_transaction_management.py
